<resources>
    <string name="app_name">NetWork</string>
    <string name="titleName">NetWork</string>
    <string name="email">Email or Phone</string>
    <string name="password">Password</string>
    <string name="enter">Log in</string>
    <string name="or">Or Login with</string>
    <string name="does_not_have_acoount">Don\'t have an account?</string>
    <string name="already_has_account">Have an account?</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="name">Full Name</string>
    <string name="password_confirm">Confirm password</string>
    <string name="continuee">Continuar</string>
    <string name="agree_terms_policy">By clicking Next, you agree to our </string>
    <string name="agree_terms_policy2"><b>Terms, Data Policy and Cookies Policy.</b></string>
    <string name="welcome_to_allPlantery"><b>WELCOME TO NetWork,\n%1$s</b>\nFind methods to care for and monitor your plant. You can change your username at any time.</string>
    <string name="photo_register_subtitle">Add a profile picture to let your friends know its you.</string>
    <string name="photo_register_title">Upload profile picture</string>
    <string name="take_picture">Tirar foto</string>
    <string name="search_gallery">Escolher na Biblioteca</string>
    <string name="define_photo_profile">Set a profile picture</string>
    <string name="jump"><b>Jump</b></string>
    <string name="add_photo">Upload a photo</string>
    <string name="home">Home</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="edit_profile">Edit profile</string>
    <string name="username">username</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">The password must not be at least 8 characters long</string>
    <string name="password_not_equal">The password and password confirmation must be the same</string>
    <string name="save">Save</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="photo">Photo</string>
    <string name="gallery">Gallery</string>
    <string name="write_caption">Escreva uma descrição…</string>
    <string name="share">Share</string>
    <string name="go">Avançar</string>
    <string name="search">Search</string>
    <string name="unfollow">Seguindo</string>
    <string name="follow">Seguir</string>
    <string name="logout">Deseja sair?</string>
    <string name="logout_action">Sair</string>
    <string name="cancel">Cancel</string>
    <string name="calendar">Calendar</string>
    <string name="myplants">My Plants</string>
    <string name="profile">Profile</string>
    <string name="profile_title">Profile</string>
    <string name="appnameplash">Plantery</string>
    <string name="account">Account</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="help"><![CDATA[Help & Supports]]></string>
    <string name="invalid_name">The name must have at least 3 characters</string>
    <string name="rank">Rank</string>
    <string name="friends">Friends</string>
    <string name="title1">Coriander</string>
    <string name="title2">Basil</string>
    <string name="title3">Dill</string>
    <string name="title4">Strawberry</string>
    <string name="title5">Lettuce</string>
    <string name="desc1">Awesome, enjoy your harvest!</string>
    <string name="desc2">Ew, I fell so dirty :( I should take a bath!</string>
    <string name="desc3">Are you ready? It\'s havest time!</string>
    <string name="desc4">Yeay! I feel clean and refreshed!</string>
    <string name="desc5">It\'s <b>Lettuce</b> harvest time!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="singup"><b><font color="@color/white">Sign up</font></b></string>
    <string name="share_profile">Share profile</string>
    <string name="discover">D</string>
    <string name="settings_and_activity">Settings and Activity</string>
    <string name="coments_post">Liked by <b>dingyu.lu</b> and <b>others</b>\n<b>nevesjn2</b> The destroyed paining is replica.</string>
    <string name="login"><b><font color="#FFFFFF">Log in</font></b></string>
    <string name="bio">Minas Gerais\n Software Engineer</string>
    <string name="empty_list"><b>No Posts yet</b></string>
    <string name="permission_camera_danied">Permission danied!</string>
    <string name="description">Description</string>
</resources>
