<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_bottom_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item android:id="@+id/menu_bottom_search"
        android:icon="@drawable/ic_search9"
        android:title="@string/search"/>

    <item android:id="@+id/menu_bottom_more"
        android:icon="@drawable/ic_story"
        android:title="@string/photo"/>

    <item android:id="@+id/menu_bottom_reel"
        android:icon="@drawable/ic_reel"
        android:title="@string/profile"/>

    <item android:id="@+id/menu_bottom_profile"
        android:icon="@drawable/ic_insta_profile"
        android:title="@string/profile"/>

</menu>