<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_primary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="70dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_edit_name_input"
                style="@style/Theme.AppNewNetwork.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_name"
                    style="@style/Theme.AppNewNetwork.FormEditText"
                    android:autofillHints="@null"
                    android:hint="@string/name"
                    android:textColorHint="@color/white"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_edit_password_input"
                style="@style/Theme.AppNewNetwork.FormEditTextInput"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                android:textColorHint="@color/white"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_password"
                    style="@style/Theme.AppNewNetwork.FormEditText"
                    android:autofillHints="@null"
                    android:hint="@string/password"
                    android:textColorHint="@color/white"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_edit_confirm_input"
                style="@style/Theme.AppNewNetwork.FormEditTextInput"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/white"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_confirm"
                    style="@style/Theme.AppNewNetwork.FormEditText"
                    android:autofillHints="@null"
                    android:textColorHint="@color/white"
                    android:hint="@string/password_confirm"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.example.appnewnetwork.common.view.LoadingButton
                android:id="@+id/register_name_btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/next" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/register_txt_login"
        style="@style/Theme.AppNewNetwork.TextViewBase"
        android:layout_width="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:paddingTop="15dp"
        android:text="@string/already_has_account"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/register_txt_singup" />

    <TextView
        android:id="@+id/register_txt_singup"
        style="@style/Theme.AppNewNetwork.TextViewBase"
        android:layout_width="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="50dp"
        android:text="@string/singup"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>