<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_primary"
    tools:context=".login.view.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_img_logo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="65dp"
                android:contentDescription="@null"
                android:padding="3dp"
                android:src="@drawable/mash_logo1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_edit_email_input"
                style="@style/Theme.AppNewNetwork.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edit_email"
                    style="@style/Theme.AppNewNetwork.FormEditText"
                    android:autofillHints="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_edit_password_input"
                style="@style/Theme.AppNewNetwork.FormEditTextInput"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edit_password"
                    style="@style/Theme.AppNewNetwork.FormEditText"
                    android:autofillHints="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.example.appnewnetwork.common.view.LoadingButton
                android:id="@+id/login_btn_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/enter" />

            <FrameLayout
                style="@style/Theme.AppNewNetwork.FormContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/gray_border" />

                <TextView
                    style="@style/Theme.AppNewNetwork.TextViewBase"
                    android:layout_gravity="center"
                    android:background="@color/blue_primary"
                    android:padding="8dp"
                    android:text="@string/or"
                    android:textStyle="bold" />

            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/login_txt_register"
        style="@style/Theme.AppNewNetwork.TextViewBase"
        android:layout_width="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/does_not_have_acoount"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/login_txt_singup" />

    <TextView
        android:id="@+id/login_txt_singup"
        style="@style/Theme.AppNewNetwork.TextViewBase"
        android:layout_width="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="50dp"
        android:text="@string/singup"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>